# NonEuclidianMap

./: .gitignore  CMakeLists.txt  Licence.txt  Readme.md
src/: ColisionResult.hpp  GameWindow.cpp  GameWindow.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Teleport.cpp  Teleport.hpp  main.cpp
src/resources/: maps.json
